src/global.css
.text-gray-600 {
	color: var(--bs-gray-600);
}

.text-gray-800 {
	color: var(--bs-gray-800);
}
@media screen and (min-width: 678px) {
	.w-sm-max {
		width: max-content;
	}
}

