fixed some margin and horizontal scroll due to chef component.

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,6 @@
+* {
+	box-sizing: border-box;
+}
 .text-gray-600 {
 	color: var(--bs-gray-600);
 }
